--- a/KR/php/css/Register.css
+++ b/KR/php/css/Register.css
@@ -8,7 +8,7 @@ html {
     left: 50%;
     width: 400px;
     padding: 20px;
-    transform: translate(-40%, -40%);
+    transform: translate(-50%, -50%);
     background: var(--color-other);
     box-sizing: border-box;
     border-radius: 10px;
@@ -16,12 +16,14 @@ html {
 
 .RegisterForm .input-box{
     position: relative;
+    margin-top: 15px;
+    margin-bottom: 10px;
 }
 
 .RegisterForm .input-box input {
     width: 100%;
     padding: 10px 0;
-    font-size: 16px;
+    font-size: 14px;
     color: var(--color-primary-text);
     margin-bottom: 20px;
     border: none;
@@ -31,21 +33,13 @@ html {
 }
 .RegisterForm .input-box label {
     position: absolute;
-    top:0;
+    top: -30px;
     left: 0;
     padding: 10px 0;
     font-size: 16px;
     color: var(--color-primary-text);
     pointer-events: none;
     transition: .5s;
-}
-
-.RegisterForm .input-box input:focus ~ label,
-.RegisterForm .input-box input:valid ~ label {
-    top: -20px;
-    left: 0;
-    color: var(--color-primary-text);
-    font-size: 12px;
 }
 
 .RegisterForm form a {
@@ -78,4 +72,9 @@ html {
     display: inline-block;
     font-size: 12px;
     cursor: pointer;
+}
+.center{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
