--- a/php/css/Register.css
+++ b/php/css/Register.css
@@ -15,7 +15,7 @@ html{
     width: 400px;
     padding: 20px;
     transform: translate(-50%, -50%);
-    background: #7EA0FC;
+    background: var(--color-primary-footer);
     box-sizing: border-box;
     border-radius: 10px;
 }
@@ -33,7 +33,7 @@ html{
 
     margin-bottom: 20px;
     border: none;
-    border-bottom: 1px solid #093ABF;
+    border-bottom: 1px solid var(--color-primary-background);
     outline: none;
     background: transparent;
 }
@@ -66,7 +66,7 @@ html{
     justify-content: center;
 }
 .SendData{
-    background-color: #093ABF;
+    background-color: var(--color-primary-background);
 
     height: 48px;
     width: 64px;
